fixed github project not showing

--- a/src/Contact.css
+++ b/src/Contact.css
@@ -21,7 +21,7 @@
     height: 100px;
     position: absolute;
     left: 30%;
-    top: 412%;
+    top: 760%;
     transform: translate(-50%, -50%);
     background: url(https://cssanimation.rocks/images/posts/steps/heart.png) no-repeat;
     background-position: 0 0;
